7.10.2010 git
- fixed error message number 5 which never appeared during db 
synchronization.
- when deleting a user, the scripts submitted by this user are 
reassigned to admin

6.10.2010 git
Project deletion also deletes existing branches for the deleted project 
and the reference from scripts to the deleted branches.

Added error messages on synchronization steps:
- if the version number is less than 0 or alphanumeric
- if the user is attempting to synchronize on a project without any 
modules

18.9.2010 git
Moved source code from CVS module dbsync hosted on GPU project to git 
module deltasql hosted on project deltasql of project homepage. 

13.9.2010 1.1.0 Release Notes
- ability to submit scripts in chain
- new deltasql client in bash script, skilled people should be able to 
build continous integration for databases with cron jobs and additional 
scripts for database bindings
- collection of usage statistics sent to deltasql.org if user agrees
- manual and FAQ improved with additional sections/questions

10.9.2010 CVS
- 1 FAQ added on phone home functionality added
- source code walk through in manual
- Bash deltasql client added

9.9.2010 CVS
- added phone home capability to deltasql to collect usage statistics
- added 3 new questions to FAQ, FAQ reorganized
- added sections in manual about Projects and Modules and on how 
  synchronization works.


8.9.2010 CVS
- ability to submit scripts in chain (setting recorded in cookie)

30.7.2010 1.0.9 Release Notes
- maintenance release with fixes from community

29.6.2010 CVS
- when in "Search scripts" the output as text file option is selected,
  the scripts are showed in ascending order

15.6.2010 CVS
- added slash at the end of Oracle stored procedure to verify
  scripts

1.0.8 Release Notes (24.5.2010)
- Important fix in install routines
- Ability to set a default database type
- Stored procedure for MS SQL server to verify that the script
 is executed on the correct database

24.5.2010 CVS