@@ -19,8 +19,8 @@ if ($moduleid=="") exit;
 mysql_connect($dbserver, $username, $password);
 @mysql_select_db($database) or die("Unable to select database");
 
-$query="DELETE FROM tbmodule where id=$moduleid;";
-mysql_query($query);
+$query4="DELETE FROM tbscriptbranch where script_id in (SELECT id FROM tbscript where module_id=$moduleid;";
+mysql_query($query4);
 
 $query2="DELETE FROM tbscript where module_id=$moduleid;";
 mysql_query($query2);
@@ -28,6 +28,8 @@ mysql_query($query2);
 $query3="DELETE FROM tbmoduleproject where module_id=$moduleid;";
 mysql_query($query3);
 
+$query="DELETE FROM tbmodule where id=$moduleid;";
+mysql_query($query);
 
 mysql_close();
 js_redirect("list_modules.php");
